# mcp-tutorial

./: README.md  country_client.py  echo_client.py  pyproject.toml  server.py  step2_echo_server.py
docs/: 00_MCP란?.md  01_MCP inspector를 활용한 테스트.md
examples/country_server/: country_client.py  country_server.py
