[tool.poetry]
name = "mcp-tutorial"
version = "0.1.0"
description = "MCP에 대한 기본 개념 학습 및 Tutorial"
authors = ["qudgus8672@publicai.co.kr <qudgus8672@publicai.co.kr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.21"
fastmcp = "^0.4.1"
uvicorn = "^0.34.0"
mcp = "^1.6.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
